add projects, project, partners and contact us pages

--- a/client/src/utils/locales/en/translation.json
+++ b/client/src/utils/locales/en/translation.json
@@ -27,5 +27,16 @@
   "Contact Us": "Contact Us",
   "EXPLORE MORE": "EXPLORE MORE",
   "BANK ACCOUNT": "BANK ACCOUNT",
-  "ADDRESS & CONTACTS": "ADDRESS & CONTACTS"
+  "ADDRESS & CONTACTS": "ADDRESS & CONTACTS",
+  "Started": "Started",
+  "Will end": "Will end",
+  "Get in touch with us here": "Get in touch with us here",
+  "WHO WE ARE": "WHO WE ARE",
+  "DONATE": "DONATE",
+  "PROJECT": "PROJECT",
+  "PROJECTS": "PROJECTS",
+  "PARTNERS": "PARTNERS",
+  "PUBLICATIONS": "PUBLICATIONS",
+  "PUBLICATION": "PUBLICATION",
+  "CONTACT US": "CONTACT US"
 }
