--- a/client/src/utils/locales/fr/translation.json
+++ b/client/src/utils/locales/fr/translation.json
@@ -27,5 +27,16 @@
   "Contact Us": "Nous contacter",
   "EXPLORE MORE": "EXPLORE PLUS",
   "BANK ACCOUNT": "COMPTE BANCAIRE",
-  "ADDRESS & CONTACTS": "ADRESSE & CONTACTS"
+  "ADDRESS & CONTACTS": "ADRESSE & CONTACTS",
+  "Started": "A débuté",
+  "Will end": "Finira",
+  "Get in touch with us here": "Contactez-nous ici",
+  "WHO WE ARE": "QUI NOUS SOMMES",
+  "DONATE": "FAIRE UN DON",
+  "PROJECT": "PROJET",
+  "PROJECTS": "PROJETS",
+  "PARTNERS": "LES PARTENAIRES",
+  "PUBLICATIONS": "PUBLICATIONS",
+  "PUBLICATION": "PUBLICATION",
+  "CONTACT US": "NOUS CONTACTER"
 }
