--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -27,5 +27,16 @@
   "Contact Us": "Twandikire",
   "EXPLORE MORE": "SHAKA BYINSHI",
   "BANK ACCOUNT": "KONTI YA BANKI",
-  "ADDRESS & CONTACTS": "AHO WABARIZA"
+  "ADDRESS & CONTACTS": "AHO WABARIZA",
+  "Started": "Yatangiye",
+  "Will end": "Izarangira",
+  "Get in touch with us here": "Twandikire hano",
+  "WHO WE ARE": "ABO TURI BO",
+  "DONATE": "TANGA INKUNGA",
+  "PROJECT": "UMUSHINGA",
+  "PROJECTS": "IMISHINGA",
+  "PARTNERS": "ABAFATANYABIKORWA",
+  "PUBLICATIONS": "AMAKURU",
+  "PUBLICATION": "INKURU",
+  "CONTACT US": "TWANDIKIRE"
 }
