getting started with payment

--- a/client/src/utils/locales/en/translation.json
+++ b/client/src/utils/locales/en/translation.json
@@ -38,5 +38,8 @@
   "PARTNERS": "PARTNERS",
   "PUBLICATIONS": "PUBLICATIONS",
   "PUBLICATION": "PUBLICATION",
-  "CONTACT US": "CONTACT US"
+  "CONTACT US": "CONTACT US",
+  "Log In": "Log In",
+  "LOGIN": "LOGIN",
+  "Which project would you like to donate to?": "Which project would you like to donate to?"
 }
