--- a/client/src/utils/locales/fr/translation.json
+++ b/client/src/utils/locales/fr/translation.json
@@ -38,5 +38,8 @@
   "PARTNERS": "LES PARTENAIRES",
   "PUBLICATIONS": "PUBLICATIONS",
   "PUBLICATION": "PUBLICATION",
-  "CONTACT US": "NOUS CONTACTER"
+  "CONTACT US": "NOUS CONTACTER",
+  "Log In": "Connexion",
+  "LOGIN": "CONNEXION",
+  "Which project would you like to donate to?": "À quel projet souhaitez-vous faire un don ?"
 }
