--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -38,5 +38,8 @@
   "PARTNERS": "ABAFATANYABIKORWA",
   "PUBLICATIONS": "AMAKURU",
   "PUBLICATION": "INKURU",
-  "CONTACT US": "TWANDIKIRE"
+  "CONTACT US": "TWANDIKIRE",
+  "Log In": "Injira",
+  "LOGIN": "INJIRA",
+  "Which project would you like to donate to?": "Nuwuhe mushinga wifuza gufasha?"
 }
