--- a/client/src/utils/locales/en/translation.json
+++ b/client/src/utils/locales/en/translation.json
@@ -41,5 +41,10 @@
   "CONTACT US": "CONTACT US",
   "Log In": "Log In",
   "LOGIN": "LOGIN",
+  "Get in touch with us": "Get in touch with us",
+  "Vision": "Vision",
+  "Mission": "Mission",
+  "Objectives": "Objectives",
+  "About us": "About us",
   "Which project would you like to donate to?": "Which project would you like to donate to?"
 }
