--- a/client/src/utils/locales/fr/translation.json
+++ b/client/src/utils/locales/fr/translation.json
@@ -41,5 +41,10 @@
   "CONTACT US": "NOUS CONTACTER",
   "Log In": "Connexion",
   "LOGIN": "CONNEXION",
+  "Get in touch with us": "Prenez contact avec nous",
+  "Vision": "Vision",
+  "Mission": "Mission",
+  "Objectives": "Objectifs",
+  "About us": "À propos de nous",
   "Which project would you like to donate to?": "À quel projet souhaitez-vous faire un don ?"
 }
