--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -41,5 +41,10 @@
   "CONTACT US": "TWANDIKIRE",
   "Log In": "Injira",
   "LOGIN": "INJIRA",
+  "Get in touch with us": "Twandikire",
+  "Vision": "Icyerekezo",
+  "Mission": "Inshingano",
+  "Objectives": "Intego",
+  "About us": "Ibitwerekeye",
   "Which project would you like to donate to?": "Nuwuhe mushinga wifuza gufasha?"
 }
