getting started with admin dashboard

--- a/client/src/utils/locales/en/translation.json
+++ b/client/src/utils/locales/en/translation.json
@@ -46,5 +46,8 @@
   "Mission": "Mission",
   "Objectives": "Objectives",
   "About us": "About us",
+  "Home": "Home",
+  "Welcome back": "Welcome back",
+  "To edit content, choose a page": "To edit content, choose a page",
   "Which project would you like to donate to?": "Which project would you like to donate to?"
 }
