--- a/client/src/utils/locales/fr/translation.json
+++ b/client/src/utils/locales/fr/translation.json
@@ -46,5 +46,8 @@
   "Mission": "Mission",
   "Objectives": "Objectifs",
   "About us": "À propos de nous",
+  "Home": "Accueil",
+  "Welcome back": "Content de te revoir",
+  "To edit content, choose a page": "Pour modifier le contenu, choisissez une page",
   "Which project would you like to donate to?": "À quel projet souhaitez-vous faire un don ?"
 }
