--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -46,5 +46,8 @@
   "Mission": "Inshingano",
   "Objectives": "Intego",
   "About us": "Ibitwerekeye",
+  "Home": "Ahabanza",
+  "Welcome back": "Kaze neza",
+  "To edit content, choose a page": "Kugira icyo uhindura, hitamo page kiriho",
   "Which project would you like to donate to?": "Nuwuhe mushinga wifuza gufasha?"
 }
