--- a/client/src/utils/locales/en/translation.json
+++ b/client/src/utils/locales/en/translation.json
@@ -61,5 +61,10 @@
   "for donating to": "for donating to",
   "project": "project",
   "Go to homepage": "Go to homepage",
+  "Our Departments": "Our Departments",
+  "Our Services": "Our Services",
+  "Read more": "Read more",
+  "Read less": "Read less",
+  "verse": "I was naked and you clothed me, I was sick and you visited me, I was in prison and you came to me.(Matthew 25:36)",
   "Which project would you like to donate to?": "Which project would you like to donate to?"
 }
