--- a/client/src/utils/locales/fr/translation.json
+++ b/client/src/utils/locales/fr/translation.json
@@ -61,5 +61,10 @@
   "for donating to": "pour faire un don à",
   "project": "project",
   "Go to homepage": "Aller à la page d'accueil",
+  "Our Departments": "Nos départements",
+  "Our Services": "Nos services",
+  "Read more": "Lire la suite",
+  "Read less": "Lire moins",
+  "verse": "j'étais nu et vous m'avez vêtu ; j'étais malade et vous m'avez visité ; j'étais en prison et vous êtes venus me voir.(Matthieu 25:36)",
   "Which project would you like to donate to?": "À quel projet souhaitez-vous faire un don ?"
 }
