--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -61,5 +61,10 @@
   "for donating to": "for donating to",
   "project": "gutanga inkunga yo",
   "Go to homepage": "Jya ahabanza",
+  "Our Departments": "Amashami yacu",
+  "Our Services": "Serivisi zacu",
+  "Read more": "Soma byinshi",
+  "Read less": "Soma bike",
+  "verse": "nari nambaye ubusa muranyambika; nari ndwaye muransura; nari imbohe muza kundeba. (Matayo 25:36)",
   "Which project would you like to donate to?": "Nuwuhe mushinga wifuza gufasha?"
 }
