add advert page

--- a/client/src/utils/locales/en/translation.json
+++ b/client/src/utils/locales/en/translation.json
@@ -37,6 +37,11 @@
   "PROJECTS": "PROJECTS",
   "PARTNERS": "PARTNERS",
   "PUBLICATIONS": "PUBLICATIONS",
+  "ADVERTISEMENT": "ADVERTISEMENT",
+  "ADVERTISEMENTS": "ADVERTISEMENTS",
+  "Advertisements": "Advertisements",
+  "Advertisement": "Advertisement",
+  "Messages": "Messages",
   "PUBLICATION": "PUBLICATION",
   "CONTACT US": "CONTACT US",
   "Log In": "Log In",
