--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -64,6 +64,11 @@
   "Our Departments": "Amashami yacu",
   "Our Services": "Serivisi zacu",
   "Read more": "Soma byinshi",
+  "ADVERTISEMENT": "KWAMAMAZA",
+  "ADVERTISEMENTS": "KWAMAMAZA",
+  "Advertisements": "Kwamamaza",
+  "Advertisement": "Kwamamaza",
+  "Messages": "Ubutumwa",
   "Read less": "Soma bike",
   "verse": "nari nambaye ubusa muranyambika; nari ndwaye muransura; nari imbohe muza kundeba. (Matayo 25:36)",
   "Which project would you like to donate to?": "Nuwuhe mushinga wifuza gufasha?"
