remove capital letters

--- a/client/src/utils/locales/en/translation.json
+++ b/client/src/utils/locales/en/translation.json
@@ -2,7 +2,7 @@
   "Donate": "Donate",
   "Read More": "Read More",
   "Learn More": "Learn More",
-  "Our Partners": "Our Partners",
+  "Our Partners": "Our partners",
   "View All": "View All",
   "Get to Know Us": "Get to Know Us",
   "Send": "Send",
@@ -66,7 +66,7 @@
   "for donating to": "for donating to",
   "project": "project",
   "Go to homepage": "Go to homepage",
-  "Our Departments": "Our Departments",
+  "Our Departments": "Our departments",
   "Our Services": "Our Services",
   "Read more": "Read more",
   "Read less": "Read less",
