--- a/client/src/utils/locales/fr/translation.json
+++ b/client/src/utils/locales/fr/translation.json
@@ -70,6 +70,6 @@
   "Advertisements": "Publicité",
   "Advertisement": "Publicité",
   "Messages": "Messages",
-  "verse": "j'étais nu et vous m'avez vêtu ; j'étais malade et vous m'avez visité ; j'étais en prison et vous êtes venus me voir.(Matthieu 25:36)",
+  "verse": "J'étais nu et vous m'avez vêtu ; j'étais malade et vous m'avez visité ; j'étais en prison et vous êtes venus me voir.(Matthieu 25:36)",
   "Which project would you like to donate to?": "À quel projet souhaitez-vous faire un don ?"
 }
