--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -70,6 +70,6 @@
   "Advertisement": "Kwamamaza",
   "Messages": "Ubutumwa",
   "Read less": "Soma bike",
-  "verse": "nari nambaye ubusa muranyambika; nari ndwaye muransura; nari imbohe muza kundeba. (Matayo 25:36)",
+  "verse": "Nari nambaye ubusa muranyambika; nari ndwaye muransura; nari imbohe muza kundeba. (Matayo 25:36)",
   "Which project would you like to donate to?": "Nuwuhe mushinga wifuza gufasha?"
 }
