--- a/client/src/utils/locales/rw/translation.json
+++ b/client/src/utils/locales/rw/translation.json
@@ -71,5 +71,5 @@
   "Messages": "Ubutumwa",
   "Read less": "Soma bike",
   "verse": "Nari nambaye ubusa muranyambika; nari ndwaye muransura; nari imbohe muza kundeba. (Matayo 25:36)",
-  "Which project would you like to donate to?": "Nuwuhe mushinga wifuza gufasha?"
+  "Which project would you like to donate to?": "Ni uwuhe mushinga wifuza gufasha?"
 }
